css/style.css
:root {}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  padding: 0;
  margin: 0;
  font-family: Georgia, 'Times New Roman', Times, serif;
}

.container {
  margin: 0 auto;
}

a:any-link {
  cursor: auto;
}

/* About */
#about-row {
  margin-top: 50px;
  margin-bottom: 20px;
  text-align: left;
}

#avatar-img {
  max-width: 70%;
  height: auto;
  margin: 0 auto;
  border-radius: 50%;
  border-color: 1px solid grey;
}

.card-img-top {
  max-width: 100%;
}

.card {
  border: none;
}

.card-text-avtr {
  justify-items: left;
}

/* Navigation styles start */

@import url(https://fonts.googleapis.com/css?family=Raleway);

h2 {
  vertical-align: center;
  text-align: left;
  margin-bottom: 30px;
}

html,
body {
  margin: 0;
  height: 100%;
}

* {
  box-sizing: border-box;
}

a {
  color: black;
}

.bg-light {
  box-shadow: 0 3px 10px 0 rgba(131, 131, 131, 0.082);
  background-color: #f3f3f3;
}

.nav-pills > li + li {
  margin-right: 1rem;
}

.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
  color: #fff;
  background-color: #eee;
  }

.nav>li>a:focus, .nav>li>a:hover {
    background-color: #eee;
  }

.navbar {
  padding-left: 75px;
  padding-right: 75px;
}

#logo {
  max-width: 85px;
}

/* Header */
#hero {
  /* The image used */
  background-image: url("../images/laptop-burst.jpg");

  /* Set a specific height */
  min-height: 600px;

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

/* Parallax */
.parallax h1 {
  margin: 0 auto;
  font-size: 48px;
  font-weight: 700;
  line-height: 56px;
  color: #fff;
}

.parallax h3 {
  font-size: 24px;
  font-weight: 300;
  color: #fff;
  text-align: center;
  font-family: "Poppins", sans-serif;
}

.btn-get-started {
  position: absolute;
  top: auto;
  left: 50%;
  transform: translate(-50%, -50%);
  padding-top: 30px;
  margin-top: 0;
  font-size: 56px;
  transition: 0.5s;
  color: #fff;
}

.btn-get-started:hover {
  padding-top: 10px;
  color: #d43076;
}

/* Skills */
#skills {
  margin-bottom: 50px;
}

.progress {
  height: 20px;
  margin-bottom: 15px;
}

.progress-bar {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  color: #fff;
  text-align: center;
  white-space: nowrap;
  background-color: #ff0090;
  transition: width .6s ease;
}

@keyframes progress {
  0% {
    width: 0%; /* Start the animation at 0% width */
  }
}

.progress-bar {
  animation: progress 2s ease-in-out forwards; /* Animate the fill for 2 seconds, with an ease-in-out effect */
}

/* Work Portfolio */
.portfolio-section-bg {
  background: linear-gradient(180deg, #eee 0%, #fff 100%);
  padding-top: 50px;
}

/* Contact */
.contact-section-bg-black {
  margin-top: 50px;
  background: linear-gradient(180deg, #eee 0%, #fff 100%);
  padding-top: 50px;
}

/* Footer */
.footer {
  padding: 20px 0;
  margin-top: 50px;
}

.card-primary:hover {
  box-shadow: 0 40px 60px -20px rgba(12, 5, 62, 0.15);
  z-index: 100;
}

.card-primary:hover {
  color: #ff0090;
}

.bg-grey {
  background-color: grey;
}

.text-white-50 {
  color: #fff;
}

.text-center {
  text-align: center !important;
}

.text-primary {
  color: #ff0090!important;
  }

